package.json updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todoapp-with-misha",
+  "name": "todoapp-with-mg",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,7 +39,10 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/qik-in-mate/todoapp-with-misha/issues"
+    "url": "https://github.com/qik-in-mate/todoapp-with-mg/issues"
   },
-  "homepage": "https://github.com/qik-in-mate/todoapp-with-mg"
+  "homepage": "https://qik-in-mate.github.io/todoapp-with-mg/",
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
